Additions to the character setup page.

--- a/2D Controller/HTML/CLASSES/MANUAL/CHARACTER-MOVEMENT/character-movement.html
+++ b/2D Controller/HTML/CLASSES/MANUAL/CHARACTER-MOVEMENT/character-movement.html
@@ -111,7 +111,8 @@
                 <td class="description">
                     The maximum speed the character is allowed to reach, from a stand still jump.
                     <br>
-                    If your character jumps while grounded and then attempts to move while in the air, their aerial speed will not surpass this specified value.
+                    If your character jumps while grounded and then attempts to move while in the air, their
+                    aerial speed will not surpass this specified percentage of the character's top speed.
                 </td>
             </tr>
         </table>
