--- a/2D Controller/HTML/locomotion-controller.html
+++ b/2D Controller/HTML/locomotion-controller.html
@@ -52,8 +52,14 @@
         <p>
             Before we proceed, let's set up our character. If you haven't completed this step yet, please visit the <a class="redirect-link" href="character-setup.html">Character Setup</a>
             section first.
+        </p>
+        <br>
+        <h2>Customization</h2>
+        <p>
+            To customize the behavior of the controller, configure the settings of each component in the Inspector.
             <br>
-            To customize the behaviour of the controller configure the setting of the component in the inspector. For more details consult the <a class="redirect-link" href="CLASSES/MANUAL/HUMANOID-CONTROLLER/humanoid-controller.html">HumanoidController</a> documentation page.
+            Visit the <a class="redirect-link" href="CLASSES/classes.html">Classes</a>
+            page and consult the "<b>Manual</b>" documentation in the "<b>Locomotion System</b>" section for each component.
         </p>
         <br>
         <h2 id="horizontal-movement">Horizontal Movement</h2>
