--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/try-floor-slide.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/try-floor-slide.html
@@ -35,6 +35,8 @@
         <h2>Description</h2>
         <p>
             Handles the logic for initiating and exiting floor sliding.
+            <br><br>
+            Upon initiating a floor-slide, your character's colliders will be toggled, making the <b>Horizontal</b> collider enabled and the <b>Vertical</b> collider disabled.
         </p>
         <ul>
             <li>
