--- a/2D Controller/HTML/collision-queries-setup.html
+++ b/2D Controller/HTML/collision-queries-setup.html
@@ -63,7 +63,8 @@
             </li>
         </ul>
         <p>
-            By correctly positioning these transforms, the CharacterEnvironmentalQuery will produce more accurate results.
+            By correctly positioning these transforms, the <a class="redirect-link" href="CLASSES/MANUAL/ENV-QUERY/env-query.html">CharacterEnvironmentalQuery</a> will
+            produce more accurate results. In the provided template prefab you can find these transforms under <b>CharacterTemplate -> PhysicsCasts</b>
         </p>
         <br>
         <img src="../IMAGES/_COLLISION-QUERIES-SETUP/ColQueryTransforms.png" alt="Queries_Transforms">
@@ -86,7 +87,7 @@
             </li>
         </ul>
         <p>
-            Based on your selected setup, the component will conduct its checks only within the specified layers. This will affect how the mechanics
+            Based on your selected setup, the component will conduct its checks only within these layers. This will affect how the mechanics
             as well as the systems within the asset operate.
         </p>
         <br>
