--- a/2D Controller/HTML/combat-system.html
+++ b/2D Controller/HTML/combat-system.html
@@ -437,7 +437,7 @@
             <li>
                 <b>BowAim -> Exit:</b>
                 <br>
-                Configure the transition with an <b>Exit Time</b> of <b>0</b> and <b>Transition Duration</b> of <b>0</b>.
+                Configure the transition with an <b>Exit Time</b> of <b>none</b> and <b>Transition Duration</b> of <b>0</b>.
                 <br>
                 Set the condition to the "<b>CancelChargeAttack</b>" trigger.
             </li>
@@ -445,7 +445,7 @@
             <li>
                 <b>BowAim -> BowFire:</b>
                 <br>
-                Configure the transition with an <b>Exit Time</b> of <b>0</b> and <b>Transition Duration</b> of <b>0</b>.
+                Configure the transition with an <b>Exit Time</b> of <b>none</b> and <b>Transition Duration</b> of <b>0</b>.
                 <br>
                 Set the condition to the "<b>ReleaseChargeAttack</b>" trigger.
             </li>
@@ -458,7 +458,7 @@
             <li>
                 <b>BowFire -> Exit:</b>
                 <br>
-                Configure the transition with an <b>Exit Time</b> of <b>0</b> and <b>Transition Duration</b> of <b>0</b>.
+                Configure the transition with an <b>Exit Time</b> of <b>none</b> and <b>Transition Duration</b> of <b>0</b>.
                 <br>
                 Set the condition to the "<b>IsAttacking</b>" boolean. <b>(false)</b>
             </li>
