Combat System: Updated some images.

--- a/2D Controller/HTML/combat-system.html
+++ b/2D Controller/HTML/combat-system.html
@@ -234,7 +234,7 @@
                 <b>Hitbox GameObject</b>
                 <ul>
                     <li>The hitbox is an empty game object and is a child of the game object with the SpriteRenderer component.</li>
-                    <li>You can find it under <b>CharacterTemplate -> SpriteHolder -> Sprites -> AttackHitbox.</b></li>
+                    <li>You can find it under <b>CharacterTemplate -> Animatable -> AttackHitbox.</b></li>
                     <li><b style="color: red;">Important:</b> Do not remove or change its position in the hierarchy, as it may affect its functionality.</li>
                 </ul>
             </li>
@@ -248,7 +248,7 @@
                     <li>
                         To align the hitbox with each attack:
                         <ul>
-                            <li>Select the Sprites game object (located under <b>CharacterTemplate -> SpriteHolder -> Sprites</b>).</li>
+                            <li>Select the Animatable game object (located under <b>CharacterTemplate -> Animatable </b>).</li>
                             <li>In the animation window, choose the attack animation you want to configure.</li>
                             <li><b>For each frame of the attack</b>, animate the position and scale of the hitbox to match your preferences.</li>
                         </ul>
