--- a/2D Controller/HTML/character-setup.html
+++ b/2D Controller/HTML/character-setup.html
@@ -92,7 +92,8 @@
         </ul>
         <br>
         <img class="img-large img-bottom-spacing" src="../IMAGES/_CHARACTER-SETUP/CharacterSetup.png" alt="CharacterSetup">
-        <img class="img-large" src="../IMAGES/_CHARACTER-SETUP/CharacterSetupCustomController.png" alt="CharacterSetupCustomController">
+        <img class="img-large img-bottom-spacing" src="../IMAGES/_CHARACTER-SETUP/CharacterSetupCustomController.png" alt="CharacterSetupCustomController">
+        <img class="img-large" src="../IMAGES/_CHARACTER-SETUP/CharacterSetupAttachController.png" alt="AttachControllerToObject">
         <br>
         <h2 id="character-animations-setup">Character Animations Setup</h2>
         <p>
