--- a/2D Controller/HTML/collision-queries-setup.html
+++ b/2D Controller/HTML/collision-queries-setup.html
@@ -105,7 +105,8 @@
             In contrast, <b>distances</b> are calculated in units, as expected. For example, if you set a "<b>Distance</b>" value to <b>1.0f</b>, the cast will be <b>1</b> Unity <b>unit away</b>
             from the character.
             <br><br>
-            You can always visualize the casts through the "<b>Debug</b>" section of the component for better clarity and troubleshooting.
+            You can always visualize the casts through the "<b>Debug</b>" section of the component for better clarity and troubleshooting, although keep in mind that in order for some
+            of the "Debug" options to work, you need to be in play mode.
         </p>
         <br>
         <img src="../IMAGES/_COLLISION-QUERIES-SETUP/ColQuerySizes&Distances.png" alt="Queries_Sizes&Distances">
