--- a/2D Controller/HTML/character-setup.html
+++ b/2D Controller/HTML/character-setup.html
@@ -148,9 +148,10 @@
         <p>
             The <b>Wall Slide</b> animation may need some adjustments to appear visually correct. Ensure that when your character is wall sliding,
             it is properly positioned against the wall. If not, you'll need to adjust your animation clip slightly.
-            A common solution is to <b>animate</b> the "<b>Sprites</b>" child object of the <b>CharacterTemplate</b> along with the wall slide
-            animation clip. This can be found under <b>CharacterTemplate -> Animatable -> SpriteHolder -> Sprites</b>. Move it slightly backward
-            once the animation begins. For reference, you can inspect how the wall-slide animation clip of the provided player character is set up.
+            A common solution is to <b>animate</b> the "<b>Sprites</b>" child object, <b>NOT</b> the "<b>SpriteHolder</b>", of the <b>CharacterTemplate</b>
+            along with the wall slide animation clip. This can be found under <b>CharacterTemplate -> Animatable -> SpriteHolder -> Sprites</b>. Move it
+            slightly backward once the animation begins. For reference, you can inspect how the wall-slide animation clip of the provided player character is
+            set up.
             <br><br>
             There is no need to fix any potential offsets right now since the character isn't yet configured to move or perform any actions. It is
             recommended to complete this documentation page first. You can then address any offsets when you reach the <b>Locomotion System</b> page,
